kubernetes/apps/yk-portfolio/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yk-portfolio
  namespace: yk-portfolio
spec:
  parentRefs:
    - name: internal
      namespace: main-gateway
      sectionName: https-yk-portfolio
  hostnames:
    - "portfolio.yuriy-lab.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yk-portfolio
          port: 80
